Added:	Entity Users (doctrine) 		user_showusers.html.twig 		HomeController::user_showusers()

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,7 +2,7 @@
 
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}{{ controller_name }}{% endblock %}
 
 {% block body %}
 <style>
