--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -19,7 +19,7 @@
 				<a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#">Users</a>
+				<a class="nav-link" href="{{ path('user_showusers') }}">Users</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#">Register</a>
