--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -10,7 +10,7 @@
 			aria-controls="navbarColor01" 
 			aria-expanded="false" 
 			aria-label="Toggle navigation">
-		<span class="navbar-toggle-icon"></span>
+		<span class="navbar-toggler-icon"></span>
 	</button>
 	
 	<div class="collapse navbar-collapse" id="navbarColor01">
