Modified: Article.php/HomeController.php
		 navbar.html.twig

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,11 +20,22 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-		{{ include('/inc/navbar.html.twig') }}    
+		{{ include('/inc/navbar.html.twig') }}
+		
+		    
     	<div class="container">
+
+            {% for message in app.flashes('success') %}
+                <div class="alert alert_success">
+                	{{ message }}
+                </div>
+            {% endfor %}
+    		
+        
             {% block body %}{% endblock %}
         </div>
         
+
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         		crossorigin="anonymous"></script>
